[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/structures/GStructure.gd" type="Script" id=1]

[node name="GStructure" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Base" type="AnimatedSprite" parent="."]

[node name="Anim" type="AnimationPlayer" parent="."]

[node name="InteractArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="InteractArea"]

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
